cluster/apps/networking/vpn/endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: vpn-ip
  namespace: vpn
subsets:
  - addresses:
      # list all external ips for this service
      - ip: 192.168.1.13
    ports:
      - name: vpn-ip
        port: 51820
        protocol: UDP
      - name: vpn-web
        port: 51821
        protocol: TCP
