cluster/apps/networking/vpn/endpoint/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn
  namespace: vpn
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "vpn.${SECRET_DOMAIN}"
      secretName: vpn-tls
  rules:
    - host: "vpn.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-ip
                port:
                  number: 51820
